# ai-cli-orchestration

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  ai-cli-orchestration.code-workspace  install-dev.sh  install.sh  link-acor.sh  pyproject.toml  pytest.ini  reload.sh  requirements.txt  setup.py
.acor/: config.yaml
docs/dev/: configuration-examples.md  implementation-roadmap.md  project-plan.md  technical-design.md
docs/mvp/: conversation-protocol.md  example-interaction.md  library-spec.md  mvp-configuration.md  mvp-roadmap.md  mvp-technical-design.md
docs/spec/: ai-cli-orchestration-pattern.md
examples/: sample.txt
examples/tools/file_processor/: README.md  cli.py
src/acor/: __init__.py  __main__.py  cli.py  commands.py  config.py  constants.py  conversation.py  discovery.py  logging.py  runner.py  version.py
src/acor/templates/tool/: README.md.template
src/acor/templates/tool/ai/: cli.py.template
src/acor/templates/tool/human/: cli.py.template
tests/: __init__.py  test_commands.py  test_config.py  test_conversation.py  test_discovery.py  test_runner.py  test_version.py
tools/status/: cli.py
